5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1601_2425.log
== TEST (2019-03-25 00:00:43) 
-- CODE:
print(round(espaço, km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(espaço, km/l))
NameError: name 'espaço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:01:33) 
-- CODE:
print(round(espaço, "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(espaço, "km/l"))
NameError: name 'espaço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:05:04) 
-- CODE:
print(round(cs, 3, "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(cs, 3, "km/l"))
NameError: name 'cs' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:07:10) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
cs=(d/c)
print(round(cs, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(cs, 3 "km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:07:43) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
cs=(d/c)
print(round("cs", 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round("cs", 3 "km/l"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:08:08) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
cs=(d/c)
print(round(cs, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(cs, 3 "km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:08:42) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
cs=(d/c)
print(round(cs, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(cs, 3 "km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:09:39) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:09:50) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 00:10:06) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, 3))
-- EXECUTION TIME:
0.115577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:10:28) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, 3k/l))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3k/l))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:10:57) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)"
print(round(csm, 3 "k/l"))
-- ERROR:
File "XXXX", line 3
    csm=(d/c)"
             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:11:08) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)"
print(round(csm, 3k/l))
-- ERROR:
File "XXXX", line 3
    csm=(d/c)"
             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:11:35) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, (3k/l)))
-- ERROR:
File "XXXX", line 4
    print(round(csm, (3k/l)))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:12:14) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, 3"kmL"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3"kmL"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:12:20) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, 3"kml"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3"kml"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:12:26) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, 3 "kml"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "kml"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:12:32) 
-- CODE:
d= int(input("distancia: "))
c=float(input("combustivel gasto: "))
csm=(d/c)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:13:05) 
-- CODE:
di= int(input("distancia: "))
co=float(input("combustivel gasto: "))
csm=(di/co)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:13:31) 
-- CODE:
di= int(input("distancia: "))
co=float(input("combustivel gasto: "))
csm=(di/co)
print(round(csm, 3 ("km/l"))
-- ERROR:
File "XXXX", line 5
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:13:47) 
-- CODE:
di= int(input("distancia: "))
co=float(input("combustivel gasto: "))
csm=(di/co)
print(round(csm, 3 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:14:26) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:15:15) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print("K/L")round(csm, 3 ))
-- ERROR:
File "XXXX", line 4
    print("K/L")round(csm, 3 ))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:15:24) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print("k/l")round(csm, 3 ))
-- ERROR:
File "XXXX", line 4
    print("k/l")round(csm, 3 ))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:15:34) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print("k/l")round(csm, 3))
-- ERROR:
File "XXXX", line 4
    print("k/l")round(csm, 3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:15:49) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(k/lround(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:16:15) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3k/l))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3k/l))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:17:25) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3 km/l))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 km/l))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:17:34) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:17:46) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3 ("km/l"))
-- ERROR:
File "XXXX", line 5
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:17:54) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:18:02) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3 km/l))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 km/l))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:18:29) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm "km/l", 3 ))
-- ERROR:
File "XXXX", line 4
    print(round(csm "km/l", 3 ))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:20:05) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm , 3 "km/l".))
-- ERROR:
File "XXXX", line 4
    print(round(csm , 3 "km/l".))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:20:17) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm , 3 "km/l".)
-- ERROR:
File "XXXX", line 4
    print(round(csm , 3 "km/l".)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:20:21) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm , 3 "km/l")
-- ERROR:
File "XXXX", line 4
    print(round(csm , 3 "km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:20:36) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:20:49) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3"km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3"km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:21:10) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3))"km/l"
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3))"km/l"
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:21:15) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3)) "km/l"
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3)) "km/l"
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:22:42) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:25:23) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3))
km/l=print(round(csm, 3))
-- ERROR:
File "XXXX", line 5
    km/l=print(round(csm, 3))
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:25:32) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)

km/l=print(round(csm, 3))
-- ERROR:
File "XXXX", line 5
    km/l=print(round(csm, 3))
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:26:12) 
-- CODE:
di= int(input("distancia km: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:27:05) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:27:40) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:27:59) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co "km/l")
print(round(csm, 3))

-- ERROR:
File "XXXX", line 3
    csm=(di/co "km/l")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:28:14) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co) "km/l"
print(round(csm, 3))

-- ERROR:
File "XXXX", line 3
    csm=(di/co) "km/l"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:28:22) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co) km/l
print(round(csm, 3))

-- ERROR:
File "XXXX", line 3
    csm=(di/co) km/l
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:28:52) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round("csm", 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:29:05) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round("csm" km/l, 3))

-- ERROR:
File "XXXX", line 4
    print(round("csm" km/l, 3))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:29:16) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round("csm km/l", 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 00:30:26) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round("csmkm/l", 3))

-- EXECUTION TIME:
0.1932
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:30:28) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round("csmkm/l", 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:30:50) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csmkm/l=(di/co)
print(round("csmkm/l", 3))

-- ERROR:
File "XXXX", line 3
    csmkm/l=(di/co)
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:30:59) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csmkm/l=(di/co)
print(round(csmkm/l, 3))

-- ERROR:
File "XXXX", line 3
    csmkm/l=(di/co)
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:31:21) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm (km/l), 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:32:25) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm "km/l", 3))

-- ERROR:
File "XXXX", line 4
    print(round(csm "km/l", 3))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:32:37) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm, "km/l" 3))

-- ERROR:
File "XXXX", line 4
    print(round(csm, "km/l" 3))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:33:22) 
-- CODE:
di= int(input("distancia km/l: "))
co=float(input("combustivel gasto L: "))
csm=(di/co)
print(round(csm,  3"km/l"))

-- ERROR:
File "XXXX", line 4
    print(round(csm,  3"km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:33:42) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3"km/l"))

-- ERROR:
File "XXXX", line 4
    print(round(csm,  3"km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:37:58) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(km/l(round(csm,  3))

-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:38:43) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3))
print(km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:39:10) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3))
print("km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 00:39:33) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3))
print("km/l")
-- EXECUTION TIME:
0.185507
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:40:03) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print("km/l")round(csm,  3))
print("km/l")
-- ERROR:
File "XXXX", line 4
    print("km/l")round(csm,  3))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:40:13) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print("km/l")round(csm,  3))

-- ERROR:
File "XXXX", line 4
    print("km/l")round(csm,  3))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:40:19) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print("km/l"round(csm,  3))

-- ERROR:
File "XXXX", line 4
    print("km/l"round(csm,  3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:40:27) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print("km/lround(csm,  3))

-- ERROR:
File "XXXX", line 4
    print("km/lround(csm,  3))
                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:40:33) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(km/lround(csm,  3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:41:09) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  '3km/l"))

-- ERROR:
File "XXXX", line 4
    print(round(csm,  '3km/l"))
                              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:41:18) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  "3km/l"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    di= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:41:50) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3"km/l"))

-- ERROR:
File "XXXX", line 4
    print(round(csm,  3"km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:42:02) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3 ("km/l"))

-- ERROR:
File "XXXX", line 5
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:42:11) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3 ("km/l"))
-- ERROR:
File "XXXX", line 5
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:42:19) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm,  3 "km/l"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:42:28) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm,  3 "km/l")
-- ERROR:
File "XXXX", line 4
    print(round(csm,  3 "km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:43:21) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 00:43:26) 
-- CODE:
di= int(input("distancia km/l: "))
co= float(input("combustivel gasto L: "))
csm= (di/co)
print(round(csm, 3 "km/l"))
-- EXECUTION TIME:
0.212778
-- ERROR:
  File "/home/codebench/codes/1601/2425/main.py", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:43:48) 
-- CODE:
dis= int(input("distancia km/l: "))
com= float(input("combustivel gasto L: "))
csm= (dis/co)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:44:06) 
-- CODE:
dis= int(input("distancia km/l: "))
com= float(input("combustivel gasto L: "))
csm= (dis/co)
print(round(csm, 3 "km/l."))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l."))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:44:15) 
-- CODE:
dis= int(input("distancia km/l: "))
com= float(input("combustivel gasto L: "))
csm= (dis/co)
print(round(csm, 3 "km/l".))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l".))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:44:34) 
-- CODE:
dis= int(input("distancia km/l: "))
com= float(input("combustivel gasto L: "))
csm= (dis/co)
print(round(csm, 3 "km/l".))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l".))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:44:53) 
-- CODE:
dis= int(input("distancia km/l: "))
com= float(input("combustivel gasto L: "))
csm= (dis/co)
print(round(csm 3, "km/l".))
-- ERROR:
File "XXXX", line 4
    print(round(csm 3, "km/l".))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:45:19) 
-- CODE:
dis= int(input("distancia km/l: "))
com= float(input("combustivel gasto L: "))
csm= (dis/co)
print(round(csm 3, "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm 3, "km/l"))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:45:30) 
-- CODE:
dis= int(input("distancia km/l: "))
com= float(input("combustivel gasto L: "))
csm= (dis/co)
print(round(csm 3, km/l))
-- ERROR:
File "XXXX", line 4
    print(round(csm 3, km/l))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:47:28) 
-- CODE:
dis= int(input("distancia "km": "))
com= float(input("combustivel gasto "l": "))
csm= (dis/co)
print(round(csm 3, km/l))
-- ERROR:
File "XXXX", line 1
    dis= int(input("distancia "km": "))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:47:40) 
-- CODE:
dis= int(input("distancia "km": "))
com= float(input("combustivel gasto "l": "))
csm= (dis/co)
print(round(csm, 3))
-- ERROR:
File "XXXX", line 1
    dis= int(input("distancia "km": "))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:47:57) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/co)
print(round(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:48:23) 
-- CODE:
dis= int(input("distancia km: "km"))
com= float(input("combustivel gasto l: "l"))
csm= (dis/co)
print(round(csm, 3))
-- ERROR:
File "XXXX", line 1
    dis= int(input("distancia km: "km"))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:48:39) 
-- CODE:
dis= int(input(distancia km: "km"))
com= float(input(combustivel gasto l: "l"))
csm= (dis/co)
print(round(csm, 3))
-- ERROR:
File "XXXX", line 1
    dis= int(input(distancia km: "km"))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:49:04) 
-- CODE:
dis= int(input("distancia km": "km"))
com= float(input("combustivel gasto l": "l"))
csm= (dis/co)
print(round(csm, 3))
-- ERROR:
File "XXXX", line 1
    dis= int(input("distancia km": "km"))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:49:17) 
-- CODE:
dis= int(input("distancia km": ))
com= float(input("combustivel gasto l": ))
csm= (dis/co)
print(round(csm, 3))
-- ERROR:
File "XXXX", line 1
    dis= int(input("distancia km": ))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:49:36) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/co)
print(round(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:49:52) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/co)
print(round(csm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3)"km/l")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:50:09) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/co)
print(round(csm, 3)"km/l".)
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3)"km/l".)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:50:16) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/co)
print(round(csm, 3)"km/l.")
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3)"km/l.")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:51:55) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/co)
print(round(csm, 3)"km/l.")
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3)"km/l.")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:52:02) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/co)
print(round(csm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3)"km/l")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:52:35) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/co)
print(km/lround(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:52:54) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print(km/lround(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:53:13) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print("km/l"round(csm, 3))
-- ERROR:
File "XXXX", line 4
    print("km/l"round(csm, 3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:54:38) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print(round(csm, 3)"km/l"
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3)"km/l"
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:55:18) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print(round(csm 3, "km/l")
-- ERROR:
File "XXXX", line 4
    print(round(csm 3, "km/l")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:55:27) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print(round(csm 3, "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm 3, "km/l"))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:55:43) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print(round(csm 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm 3 "km/l"))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:56:02) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:56:38) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print("km/l"round(csm, 3))
-- ERROR:
File "XXXX", line 4
    print("km/l"round(csm, 3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:56:48) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print("km/l" round(csm, 3))
-- ERROR:
File "XXXX", line 4
    print("km/l" round(csm, 3))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:56:59) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print("km/l") round(csm, 3))
-- ERROR:
File "XXXX", line 4
    print("km/l") round(csm, 3))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:57:06) 
-- CODE:
dis= int(input("distancia km: "))
com= float(input("combustivel gasto l: "))
csm= (dis/com)
print("km/l")
round(csm, 3))
-- ERROR:
File "XXXX", line 5
    round(csm, 3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:59:57) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com)
print("km/l")round(csm, 3))
-- ERROR:
File "XXXX", line 4
    print("km/l")round(csm, 3))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:00:06) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com)
print(round(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:00:17) 
-- CODE:
dis= int(input("distancia (km): n"))
com= float(input("combustivel gasto (l): n"))
csm= (dis/com)
print(round(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:00:36) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com)
print(round(csm, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:01:14) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com "km/l")
print(round(csm, 3))
-- ERROR:
File "XXXX", line 3
    csm= (dis/com "km/l")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:01:26) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) "km/l")
print(round(csm, 3))
-- ERROR:
File "XXXX", line 3
    csm= (dis/com) "km/l")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:01:37) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) "km/l"
print(round(csm, 3))
-- ERROR:
File "XXXX", line 3
    csm= (dis/com) "km/l"
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:01:52) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:03:16) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm "3km/l",  ))
-- ERROR:
File "XXXX", line 4
    print(round(csm "3km/l",  ))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:03:29) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm 3km/l,  ))
-- ERROR:
File "XXXX", line 4
    print(round(csm 3km/l,  ))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:03:43) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm km/l,  3))
-- ERROR:
File "XXXX", line 4
    print(round(csm km/l,  3))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 01:03:48) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm km/l,  3))
-- EXECUTION TIME:
0.130255
-- ERROR:
  File "/home/codebench/codes/1601/2425/main.py", line 4
    print(round(csm km/l,  3))
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:03:59) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm "km/l",  3))
-- ERROR:
File "XXXX", line 4
    print(round(csm "km/l",  3))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:04:10) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm "km/l,  3"))
-- ERROR:
File "XXXX", line 4
    print(round(csm "km/l,  3"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:04:19) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round("csm km/l,  3"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:04:55) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3kml))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3kml))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:05:06) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3"kml"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3"kml"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:05:14) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, "3kml"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:05:40) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(str(csm, "3kml"))
-- ERROR:
File "XXXX", line 5
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:05:49) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, "3kml"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:06:12) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3) "kml")
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3) "kml")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:10:14) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3) "kml")
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3) "kml")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:10:20) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3) )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:10:40) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3) "14.286 km/l")
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3) "14.286 km/l")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:11:06) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3 "14.286 km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "14.286 km/l"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:11:20) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:31) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3 )
-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:50) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:26:19) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
x="km/l" print(round(csm, 3 ))
-- ERROR:
File "XXXX", line 4
    x="km/l" print(round(csm, 3 ))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:26:31) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
print(round(csm, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(csm, 3 "km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:11:37) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:11:46) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.175323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:11:52) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.1359
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:11:55) 
-- CODE:
dis= int(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:13:03) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.206752
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:14:01) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.194255
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:27:13) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.179422
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:47:17) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.12209
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:03:51) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.13825
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:15:32) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.127632
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:59:11) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.176615
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:00:34) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.14081
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:27:17) 
-- CODE:
dis= float(input("distancia (km): "))
com= float(input("combustivel gasto (l): "))
csm= (dis/com) 
csm1=round(csm, 3)
print(csm1, "km/l")
-- EXECUTION TIME:
0.203867
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
